canvasGlobal.css
/* ... */
  #kl_wrapper.kl_fp_flat_sections #kl_navigation,
  #kl_wrapper.kl_flat_sections #kl_navigation {width: 100%; background-color: #1e5799; margin: 0 0 20px; color: #fff; height: 48px; overflow: hidden; padding: 0;}
  #kl_wrapper.kl_fp_flat_sections #kl_navigation ul,
  #kl_wrapper.kl_flat_sections #kl_navigation ul {margin-bottom: 0;}
  #kl_wrapper.kl_fp_flat_sections #kl_navigation li,
  #kl_wrapper.kl_flat_sections #kl_navigation li {padding: 7px 5px; background: none;}
  #kl_wrapper.kl_fp_flat_sections #kl_navigation a[class*=icon-]:before,
  #kl_wrapper.kl_fp_flat_sections #kl_navigation a[class^=icon-]:before,
  #kl_wrapper.kl_fp_flat_sections #kl_navigation a[class*=fa-]:before,
  #kl_wrapper.kl_fp_flat_sections #kl_navigation a[class^=fa-]:before,
  #kl_wrapper.kl_flat_sections #kl_navigation a[class*=icon-]:before,
  #kl_wrapper.kl_flat_sections #kl_navigation a[class^=icon-]:before,
  #kl_wrapper.kl_flat_sections #kl_navigation a[class*=fa-]:before,
  #kl_wrapper.kl_flat_sections #kl_navigation a[class^=fa-]:before {display: inline-block; background: #fff; padding: 7px 0px; text-align: center; border-radius: 20px; color: #696969; margin-right: 8px; border: 1px solid #696969;}
  #kl_wrapper.kl_fp_flat_sections h3,
  #kl_wrapper.kl_flat_sections h3 {color: #000; border-top: 1px solid #E0E0E0; text-align: center; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 22px; letter-spacing: 3px; text-transform: uppercase; }
  #kl_wrapper.kl_fp_flat_sections h3:before,
  #kl_wrapper.kl_flat_sections h3:before {color: #696969; display: block; margin: -25px auto 0; text-align: center; border: 1px solid #E0E0E0; width: 45px; border-radius: 50px; height: 50px; line-height: 50px; background-color: #fff; font-size: 25px; padding-left: 5px; }
  #kl_wrapper.kl_fp_flat_sections h4,
  #kl_wrapper.kl_flat_sections h4 {color: #000; border-bottom: 1px solid #E0E0E0; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 18px; letter-spacing: 3px; text-transform: uppercase; margin: 40px 0 20px; }
  #kl_wrapper.kl_fp_flat_sections h5,
  #kl_wrapper.kl_flat_sections h5 {color: #000; border-bottom: 1px solid #E0E0E0; font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 16px; letter-spacing: 3px; margin: 40px 0 20px; }
  #kl_wrapper.kl_fp_flat_sections > div,
  #kl_wrapper.kl_flat_sections > div {padding: 25px 45px 45px; margin-bottom: 25px; font-size: 16px; overflow: hidden }
  #kl_wrapper.kl_fp_flat_sections > div img,
  #kl_wrapper.kl_flat_sections > div img {border: 1px solid #ccc; padding: 5px; background: #fff; }
  #kl_wrapper.kl_fp_flat_sections .link_holder img,
  #kl_wrapper.kl_flat_sections .link_holder img {border:none; background: none; }
  #kl_wrapper.kl_fp_flat_sections > div:nth-child(odd),
  #kl_wrapper.kl_flat_sections > div:nth-child(odd) {background: #f8f8f8; }
  #kl_wrapper.kl_fp_flat_sections .well,
  #kl_wrapper.kl_flat_sections .well {min-height: 20px; padding: 19px; margin-bottom: 20px; background-color: #f5f5f5; border: 1px solid #e3e3e3; border-radius: 4px; -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.05); box-shadow: inset 0 1px 1px rgba(0,0,0,.05); }
  #kl_wrapper.kl_fp_flat_sections #kl_modules li[class*=icon-]:before,
  #kl_wrapper.kl_flat_sections #kl_modules li[class*=icon-]:before,
  #kl_wrapper.kl_fp_flat_sections #kl_modules li[class^=icon-]:before,
  #kl_wrapper.kl_flat_sections #kl_modules li[class^=icon-]:before {margin: 0 10px 5px 0; font-size: 20px; float: left;}
  #kl_wrapper.kl_fp_flat_sections #kl_modules li[class*=fa-]:before,
  #kl_wrapper.kl_flat_sections #kl_modules li[class*=fa-]:before,
  #kl_wrapper.kl_fp_flat_sections #kl_modules li[class^=fa-]:before,
  #kl_wrapper.kl_flat_sections #kl_modules li[class^=fa-]:before {margin: 0 10px 5px 0; font-size: 20px; float: left;}
  #kl_wrapper.kl_fp_flat_sections #kl_modules.kl_modules_tabbed li[class*=icon-]:before,
  #kl_wrapper.kl_flat_sections #kl_modules.kl_modules_tabbed li[class*=icon-]:before,
  #kl_wrapper.kl_fp_flat_sections #kl_modules.kl_modules_tabbed li[class^=icon-]:before,
  #kl_wrapper.kl_flat_sections #kl_modules.kl_modules_tabbed li[class^=icon-]:before {margin: 9px 0 5px 10px; font-size: 20px; float: left;}
  #kl_wrapper.kl_fp_flat_sections #kl_modules.kl_modules_tabbed li[class*=fa-]:before,
  #kl_wrapper.kl_flat_sections #kl_modules.kl_modules_tabbed li[class*=fa-]:before,
  #kl_wrapper.kl_fp_flat_sections #kl_modules.kl_modules_tabbed li[class^=fa-]:before,
  #kl_wrapper.kl_flat_sections #kl_modules.kl_modules_tabbed li[class^=fa-]:before {margin: 7px 0 5px 10px; font-size: 20px; float: left;}
  .mceContentBody #kl_wrapper.kl_fp_flat_sections #kl_modules.kl_modules_tabbed li[class*=icon-]:before,
  .mceContentBody #kl_wrapper.kl_flat_sections #kl_modules.kl_modules_tabbed li[class*=icon-]:before,
  .mceContentBody #kl_wrapper.kl_fp_flat_sections #kl_modules.kl_modules_tabbed li[class^=icon-]:before,
  .mceContentBody #kl_wrapper.kl_flat_sections #kl_modules.kl_modules_tabbed li[class^=icon-]:before,
  .mceContentBody #kl_wrapper.kl_fp_flat_sections #kl_modules.kl_modules_tabbed li[class*=fa-]:before,
  .mceContentBody #kl_wrapper.kl_flat_sections #kl_modules.kl_modules_tabbed li[class*=fa-]:before,
  .mceContentBody #kl_wrapper.kl_fp_flat_sections #kl_modules.kl_modules_tabbed li[class^=fa-]:before,
  .mceContentBody #kl_wrapper.kl_flat_sections #kl_modules.kl_modules_tabbed li[class^=fa-]:before {margin: 0 10px 0 0;}
  #kl_wrapper.kl_fp_flat_sections #kl_introduction p:first-child,
  #kl_wrapper.kl_flat_sections #kl_introduction p:first-child {font-size: 21px; font-weight: 200; line-height: 30px; }
  #kl_wrapper.kl_fp_flat_sections blockquote,
  #kl_wrapper.kl_flat_sections blockquote {border-left: 5px solid #E0E0E0; }
  /* CP */
  #kl_wrapper.kl_flat_sections #kl_banner {background: #1e5799; padding: 20px 0; color: #fff; margin: 0 -25px 50px;}
/* ... */

